--- a/tabuada/index.html
+++ b/tabuada/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Talbada</title>
-    <link rel="stylesheet" href="tabuada-ex4.css">
+    <title>Tabuada</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <h1>Tabú</h1>
+        <h1>Tabuada do 10</h1>
     </header>
     <section>
         <div id="calculo">
@@ -30,6 +30,6 @@
     <footer>
         <p>&copy; Pedro Goulart</p>
     </footer>
-    <script src="tabuada-ex4.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
