--- a/Jogo da velha/index.html
+++ b/Jogo da velha/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="board x" data-board>
+    <div class="board" data-board>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
@@ -21,8 +21,8 @@
     </div>
 
     <div class="winning-message" data-winning-message>
-        <p class="winning-message-text">X venceu</p>
-        <button class="winning-message-button">Reiniciar!</button>
+        <p class="winning-message-text" data-winning-message-text>X venceu</p>
+        <button class="winning-message-button" data-restart-button>Reiniciar!</button>
     </div>
 </body>
 <script src="index.js"></script>
