--- a/Jogo da velha/index.html
+++ b/Jogo da velha/index.html
@@ -22,7 +22,7 @@
 
     <div class="winning-message" data-winning-message>
         <p class="winning-message-text" data-winning-message-text>X venceu</p>
-        <button class="winning-message-button" data-restart-button>Reiniciar!</button>
+        <button class="winning-message-button" data-restart-button>Recomeçar!</button>
     </div>
 </body>
 <script src="index.js"></script>
