--- a/Jogo da memória/index.html
+++ b/Jogo da memória/index.html
@@ -4,26 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo da memória</title>
-    <link rel="stylesheet" href="./CSS/login.css">
+    <title>Jogo da memória | Login</title>
 
+    <link rel="stylesheet" href="./CSS/login.css">
     <link rel="stylesheet" href="./CSS/reset.css">
+<!--"defer" atrasa a leitura da pagina linkada para que seja lida por ultimo-->
+    <script defer src="./JS/login.js"></script>
 </head>
 <body>
-    <form class="login_form">
-        <div class="login_header">
+    <form class="login-form">
+        <div class="login-header">
             <img src="./Files/icon.png" alt="Plant icon">
             <h1>Jogo da memória</h1>
         </div>
 
-        <input type="text" placeholder="Nome" class="login_input">
-        <button type="submit" class="login_button">Play</button>
+        <input type="text" placeholder="Nome" class="login-input">
+        <button type="submit" class="login-button" disabled>Play</button>
 
     </form>
     
 
 
 
-    <script src="./JS/index.js"></script>
+    
 </body>
 </html>
