--- a/Jogo da memória/game.html
+++ b/Jogo da memória/game.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da memória | Animais</title>
 
+    <link rel="stylesheet" href="./CSS/game.css">
+    <link rel="stylesheet" href="./CSS/reset.css">
+    <script defer src="./JS/game.js"></script>
 </head>
 <body>
-    <h1>Jogo da Memória</h1>
+    <main>
+        <header>
+            <span class="player"></span>
+            <span>Tempo: <span class="timer">00</span></span>
+        </header>
+        <div class="grid"></div>
+    </main>
 </body>
 </html>  
