--- a/Jogo da memória/index.html
+++ b/Jogo da memória/index.html
@@ -14,8 +14,9 @@
 <body>
     <form class="login-form">
         <div class="login-header">
-            <img src="./Files/icon.png" alt="Plant icon">
+            <img src="./Files/icon1.png" alt="Plant icon">
             <h1>Jogo da memória</h1>
+            <p>Animais</p>
         </div>
 
         <input type="text" placeholder="Nome" class="login-input">
